// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoBox 1`] = `
<div>
  <div
    class="mb-3"
  >
    <form
      class="todo-form"
    >
      <div
        class="mb-3"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        add
      </button>
    </form>
  </div>
</div>
`;

exports[`TodoBox 2`] = `
<div>
  <div
    class="mb-3"
  >
    <form
      class="todo-form"
    >
      <div
        class="mb-3"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value="first task"
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        add
      </button>
    </form>
  </div>
</div>
`;

exports[`TodoBox 3`] = `
<div>
  <div
    class="mb-3"
  >
    <form
      class="todo-form"
    >
      <div
        class="mb-3"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        add
      </button>
    </form>
  </div>
  <div
    class="todo-active-tasks"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        1
      </div>
      <div
        class="col"
      >
        <a
          class="todo-task"
          href="#"
        >
          first task
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodoBox 4`] = `
<div>
  <div
    class="mb-3"
  >
    <form
      class="todo-form"
    >
      <div
        class="mb-3"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value="second task"
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        add
      </button>
    </form>
  </div>
  <div
    class="todo-active-tasks"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        1
      </div>
      <div
        class="col"
      >
        <a
          class="todo-task"
          href="#"
        >
          first task
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodoBox 5`] = `
<div>
  <div
    class="mb-3"
  >
    <form
      class="todo-form"
    >
      <div
        class="mb-3"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        add
      </button>
    </form>
  </div>
  <div
    class="todo-active-tasks"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        2
      </div>
      <div
        class="col"
      >
        <a
          class="todo-task"
          href="#"
        >
          second task
        </a>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        1
      </div>
      <div
        class="col"
      >
        <a
          class="todo-task"
          href="#"
        >
          first task
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodoBox 6`] = `
<div>
  <div
    class="mb-3"
  >
    <form
      class="todo-form"
    >
      <div
        class="mb-3"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        add
      </button>
    </form>
  </div>
  <div
    class="todo-active-tasks"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        2
      </div>
      <div
        class="col"
      >
        <a
          class="todo-task"
          href="#"
        >
          second task
        </a>
      </div>
    </div>
  </div>
  <div
    class="todo-finished-tasks"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        1
      </div>
      <div
        class="col"
      >
        <s>
          <a
            class="todo-task"
            href="#"
          >
            first task
          </a>
        </s>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodoBox 7`] = `
<div>
  <div
    class="mb-3"
  >
    <form
      class="todo-form"
    >
      <div
        class="mb-3"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        add
      </button>
    </form>
  </div>
  <div
    class="todo-active-tasks"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        2
      </div>
      <div
        class="col"
      >
        <a
          class="todo-task"
          href="#"
        >
          second task
        </a>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-1"
      >
        1
      </div>
      <div
        class="col"
      >
        <a
          class="todo-task"
          href="#"
        >
          first task
        </a>
      </div>
    </div>
  </div>
</div>
`;
